--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "files": [
     "index.js",
     "route-loader.js",
-    "generator"
+    "generator",
+    "prompts.js"
   ],
   "keywords": [
     "vue",
