--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
-    "vue-route-generator": "v0.5.0",
+    "@ycmfe/vue-route-generator": "^0.5.1",
     "webpack-chokidar-plugin": "^1.0.5"
   }
 }
